[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/parallax_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GameMenu.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[node name="game" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="parallax_background" parent="." instance=ExtResource( 2 )]
offset = Vector2( -5000, 0 )
transform = Transform2D( 1, 0, 0, 1, -5000, 0 )

[node name="win" type="Button" parent="."]
margin_left = 1301.0
margin_top = 30.0
margin_right = 1338.0
margin_bottom = 50.0
text = "Win"

[node name="die" type="Button" parent="."]
margin_left = 1304.0
margin_top = 715.0
margin_right = 1338.0
margin_bottom = 735.0
text = "Die"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -3, 0 )
tile_set = ExtResource( 3 )
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( 524272, 5, 0, 524273, 5, 0, 524274, 5, 0, 524275, 5, 0, 524276, 5, 0, 524277, 5, 0, 524278, 5, 0, 524279, 5, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 458778, 5, 0, 458779, 5, 0, 458780, 5, 0, 458781, 5, 0, 458782, 5, 0, 458783, 5, 0, 458784, 5, 0, 458785, 5, 0, 458786, 5, 0, 458787, 5, 0, 458788, 5, 0, 458789, 5, 0, 458790, 5, 0, 458791, 5, 0, 458792, 5, 0, 458793, 5, 0 )

[node name="player" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 512.904, 222.247 )
physics_material_override = SubResource( 1 )
custom_integrator = false
linear_damp = 0.0

[node name="Camera2D2" type="Camera2D" parent="player"]
current = true

[node name="CenterContainer" type="CenterContainer" parent="player/Camera2D2"]
margin_left = -67.0
margin_top = -28.0
margin_right = 55.0
margin_bottom = 43.0

[node name="GameMenu" parent="player/Camera2D2/CenterContainer" instance=ExtResource( 5 )]

[connection signal="pressed" from="win" to="." method="_on_win_pressed"]
[connection signal="pressed" from="die" to="." method="_on_die_pressed"]
